# SIGERE

./: .pylintrc  README.md  package-lock.json  package.json  requirements.txt
.github/workflows/: ci.yml
backend/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/SIGERE/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend_config/: settings.py  urls.py
backend/gerenciamento/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  testes.py  views.py
backend/gerenciamento/migrations/: 0001_initial.py  0002_remove_auditoria_usuario_and_more.py  0003_alter_protocolo_data_entrega_perito_and_more.py  0004_requisicao_numero_documento_and_more.py  0005_alter_requisicao_numero_caso.py  0006_rename_quant_equipamente_equipamento_quant_equipamento.py  0007_alter_armazenamento_deposito.py
backend/requisicoes/: models.py  serializers.py  tests.py  urls.py  views.py
backend/requisicoes/migrations/: 0001_initial.py  0002_remove_material_prateleira_and_more.py  0003_material_prateleira.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Forms.jsx  Login.css  Login.jsx  MaterialForm.jsx  OffcanvasNavbar.jsx
src/: App.css  App.js  App.jsx  index.css  main.jsx
src/components/: Forms.jsx  Login.jsx  MaterialForm.jsx  OffcanvasNavbar.jsx
src/components/CadastroMaterial/: CadastroMaterial.css  CadastroMaterial.js
src/components/CadastroRequisicao/: CadastroRequisicao.css  CadastroRequisicao.js
src/components/Header/: Header.css  Header.js
(+2 files in other folders)
