[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia Macedo",email = "natalia.macedo@discente.ufra.edu.br"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"

